--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,1 +1,39 @@
+<!doctype html>
+<html lang="en">
 
+<head>
+  <meta charset="utf-8">
+  <title>Module 2 Solution</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/style.css" type="text/css">
+</head>
+  <body>
+    <h1>Our Menu</h1>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="box1">
+        <div class="inside">Chicken</div>
+        <p>Minim proident minim in laboris ea fugiat magna. 
+          Ea non sint magna ut cupidatat qui commodo officia ut est labore nisi magna ullamco. 
+          Amet ea qui quis eiusmod non ad fugiat enim pariatur aliqua Lorem. Anim aute occaecat eu proident. 
+          Esse sunt adipisicing aute do anim reprehenderit aute consequat nulla esse dolor deserunt.</p>
+      </div>
+      <div class="box2">
+        <div class="inside2">Beef</div>
+        <p>Minim proident minim in laboris ea fugiat magna. 
+          Ea non sint magna ut cupidatat qui commodo officia ut est labore nisi magna ullamco. 
+          Amet ea qui quis eiusmod non ad fugiat enim pariatur aliqua Lorem. Anim aute occaecat eu proident. 
+          Esse sunt adipisicing aute do anim reprehenderit aute consequat nulla esse dolor deserunt.</p>
+      </div>
+      <div class="box3">
+        <div class="inside3">Sushi</div>
+        <p>Minim proident minim in laboris ea fugiat magna. 
+          Ea non sint magna ut cupidatat qui commodo officia ut est labore nisi magna ullamco. 
+          Amet ea qui quis eiusmod non ad fugiat enim pariatur aliqua Lorem. Anim aute occaecat eu proident. 
+          Esse sunt adipisicing aute do anim reprehenderit aute consequat nulla esse dolor deserunt.</p>
+      </div>
+    </div>
+  </div>
+ 
+  </body>
+</html>
