--- a/mod3_solution/index.html
+++ b/mod3_solution/index.html
@@ -18,7 +18,7 @@
         Food,LLC
       </a>
     </div>
-    <button type="button" class="navbar-toggle collapsed visible-xs" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+    <button type="button" class="navbar-toggle collapsed " data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -44,7 +44,7 @@
 <div id="main-content" class="container">
 <div class="row" id="Content"> 
 
-<div class="col-xs-12">
+<div class="col-md-12">
   <h5>Chicken</h5>
   <p>Chicken is the most common type of poultry in the world.[1] Owing to the relative ease and low cost of raising them in comparison to animals such as cattle or hogs, chickens have become prevalent throughout the cuisine of cultures around the world, and their meat has been variously adapted to regional tastes. noun. a domestic fowl, Gallus domesticus, descended from various jungle fowl, especially the red jungle fowl, and developed in a number of breeds for its flesh, eggs, and feathers. the young of this bird, especially when less than a year old. the flesh of the chicken, especially of the young bird, used as food. Raw chicken may contain Salmonella. The safe minimum cooking temperature recommended by the U.S. Department of Health & Human Services is 165 °F (74 °C) to prevent foodborne illness because of bacteria and parasites.[31] However, in Japan raw chicken is sometimes consumed in a dish called torisashi, which is sliced raw chicken served in sashimi style. Another preparation is toriwasa which is lightly seared on the outsides while the inside remains raw.[32]
 
